--- a/package.json
+++ b/package.json
@@ -14,9 +14,10 @@
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
     "aos": "^3.0.0-beta.6",
-    "next": "15.0.4",
-    "react": "19.0.0",
-    "react-dom": "19.0.0",
+    "fs": "^0.0.1-security",
+    "next": "^15.1.2",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "typescript": "^5.3.3"
   },
   "devDependencies": {
