--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@headlessui/react": "^2.1.3",
+    "@netlify/plugin-nextjs": "^5.9.2",
     "@types/node": "^22.5.0",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
@@ -18,7 +19,8 @@
     "next": "^15.1.2",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "typescript": "^5.3.3"
+    "typescript": "^5.3.3",
+    "webpack-bundle-analyzer": "^4.10.2"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
