--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@types/react-dom": "19.0.1",
     "aos": "^3.0.0-beta.6",
     "fs": "^0.0.1-security",
-    "next": "^15.1.2",
+    "next": "^15.1.3",
+    "punycode": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "typescript": "^5.3.3",
