--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev --turbopack",
-    "build": "next build",
+    "build": "next build && npm prune --production",
     "start": "next start",
     "lint": "next lint"
   },
@@ -26,7 +26,9 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
+    "@vercel/node": "^5.0.0",
     "autoprefixer": "^10.4.16",
+    "esbuild": "^0.24.2",
     "postcss": "^8.4.32",
     "tailwindcss": "^3.3.6"
   }
