--- a/vercel.json
+++ b/vercel.json
@@ -1,6 +1,6 @@
 {
     "functions": {
-        "api/**": {
+        "app/api/**": {
             "excludeFiles": "{.next,*.cache,node_modules,public,app}/**"
         }
     }
