--- a/package.json
+++ b/package.json
@@ -11,12 +11,14 @@
   "dependencies": {
     "@headlessui/react": "^2.1.3",
     "@netlify/plugin-nextjs": "^5.9.2",
+    "@sendgrid/mail": "^8.1.4",
     "@types/node": "^22.5.0",
     "@types/react": "19.0.1",
     "@types/react-dom": "19.0.1",
     "aos": "^3.0.0-beta.6",
     "fs": "^0.0.1-security",
     "next": "^15.1.3",
+    "nodemailer": "^6.9.16",
     "punycode": "^2.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
@@ -26,6 +28,7 @@
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.7",
     "@types/aos": "^3.0.7",
+    "@types/nodemailer": "^6.4.17",
     "@vercel/node": "^4.0.0",
     "autoprefixer": "^10.4.16",
     "esbuild": "^0.24.2",
